# terlang

./: .gitignore  CMakeLists.txt  README.md  debug.ter
docs/: README.md
src/: ArrayType.cpp  ArrayType.hpp  Builtin.cpp  Builtin.hpp  BuiltinFactory.cpp  BuiltinFactory.hpp  Class.cpp  Class.hpp  Debug.cpp  Debug.hpp  Environment.cpp  Environment.hpp  Expr.hpp  Function.cpp  Function.hpp  Helpers.hpp  IncludeRun.cpp  IncludeRun.hpp  Instance.cpp  Instance.hpp  Interpreter.cpp  Interpreter.hpp  Parser.cpp  Parser.hpp  Resolver.cpp  Resolver.hpp  RuntimeError.cpp  Scanner.cpp  Scanner.hpp  Ter.cpp  Ter.hpp  Token.cpp  Token.hpp  TokenType.hpp  main.cpp
src/interpreter/: ArrayType.cpp  ArrayType.hpp  Builtin.cpp  Builtin.hpp  BuiltinFactory.cpp  BuiltinFactory.hpp  Callable.hpp  Class.cpp  Class.hpp  Environment.cpp  Environment.hpp  Function.hpp  Instance.cpp  Instance.hpp  Interpreter.cpp  Interpreter.hpp  Resolver.cpp
src/parser/: Expr.cpp  Expr.hpp  (+7 more)
tests/: args.ter  args.ter.args  args.ter.result  bitwiseOperators.ter  bitwiseOperators.ter.result  bitwiseShift.ter  bitwiseShift.ter.result  classes.ter  classes.ter.result  comparision.ter  comparision.ter.result  errorString.ter  errorString.ter.error  escapedChars.ter  escapedChars.ter.result  functions.ter  functions.ter.result  hello.ter  hello.ter.result  incdec.ter  incdec.ter.result  include.ter  library.ter  limits.ter  limits.ter.result  loops.ter  loops.ter.result  numbers.ter  numbers.ter.result  operators.modulo.ter  operators.modulo.ter.result  operators.ter  operators.ter.result  run.bat  run.sh
(+10 files in other folders)
